shorten_expanded: use dojo button, don't break attachment dropdown, other fixes

--- a/plugins/shorten_expanded/init.css
+++ b/plugins/shorten_expanded/init.css
@@ -1,9 +1,9 @@
-div.contentSizeWrapper {
+.content-shrink-wrap {
 	overflow : hidden;
 	text-overflow: ellipsis;
 	height : 800px;
 }
 
-button.expandPrompt {
-	margin-top : 20px;
+.expand-prompt {
+	margin-top : 16px;
 }
